deploy/kubernetes/observabilidade-portal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observabilidade-portal
  labels:
    app.kubernetes.io/part-of: observabilidade-portal
